objects/Bread_Winner__Breadwinner_Account_Connection__c.object
<CustomObject>
    <fields>
        <fullName>Bread_Winner__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Accounts_Payable_Tax_Type__c</fullName>
        <label>Accounts Payable Tax Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Accounts_Receivable_Tax_Type__c</fullName>
        <label>Accounts Receivable Tax Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__AttentionTo__c</fullName>
        <label>Attention To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Bill_Default_Due_Date_Days__c</fullName>
        <label>Bill Default Due Date Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Bill_Default_Due_Date_Type__c</fullName>
        <label>Bill Default Due Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Breadwinner_Sync_Status__c</fullName>
        <label>Breadwinner Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__City__c</fullName>
        <description>City of the Address</description>
        <label>Town / City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__CompanyName__c</fullName>
        <description>Company Name of Xero Contact</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_1_Email__c</fullName>
        <label>Contact 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_1_First_Name__c</fullName>
        <label>Contact 1 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_1_Include_in_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact 1 Include in Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_1_Last_Name__c</fullName>
        <label>Contact 1 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_2_Email__c</fullName>
        <label>Contact 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_2_First_Name__c</fullName>
        <label>Contact 2 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_2_Include_in_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact 2 Include in Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_2_Last_Name__c</fullName>
        <label>Contact 2 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_3_Email__c</fullName>
        <label>Contact 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_3_First_Name__c</fullName>
        <label>Contact 3 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_3_Include_in_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact 3 Include in Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Contact_3_Last_Name__c</fullName>
        <label>Contact 3 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Country__c</fullName>
        <description>Country of Address</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Created_via__c</fullName>
        <label>Created via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__DefaultCurrency__c</fullName>
        <description>Default Currency of account</description>
        <label>Default Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Default_Discount__c</fullName>
        <label>Default Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Default_Invoice_Branding_Theme__c</fullName>
        <label>Default Invoice Branding Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Default_Purchase_Revenue_Account_Code__c</fullName>
        <label>Default Purchase Revenue Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Default_Revenue_Account_Code__c</fullName>
        <label>Default Revenue Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Do_not_Import_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Import Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Do_not_Import_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Import Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Do_not_Import_Purchase_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Import Purchase Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__EmailAddress__c</fullName>
        <description>Email Address of Contact</description>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__FirstName__c</fullName>
        <description>Contact First Name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Invoice_Default_Due_Date_Days__c</fullName>
        <label>Invoice Default Due Date Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Invoice_Default_Due_Date_Type__c</fullName>
        <label>Invoice Default Due Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Is_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__LastName__c</fullName>
        <description>Last Name of Contact</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Last_Modified_in_Xero_Date__c</fullName>
        <label>Last Modified in Xero Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__No_Associated_SF_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Associated SF Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Phone__c</fullName>
        <description>Phone (default) number of Contact</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__PostalCode__c</fullName>
        <description>Postal Code for the Address</description>
        <label>Postal / Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Purchase_Tracking_Category_1_Value__c</fullName>
        <label>Purchase Tracking Category 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Purchase_Tracking_Category_2_Value__c</fullName>
        <label>Purchase Tracking Category 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bread_Winner__Region__c</fullName>
        <description>Region of the Address</description>
        <label>State / Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Salesforce_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Xero Contacts</relationshipLabel>
        <relationshipName>Xero_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__See_this_Account_in_Xero__c</fullName>
        <formula>HYPERLINK(&quot;https://go.xero.com/Contacts/View.aspx?contactID=&quot;+ Bread_Winner__Reference_Id__c ,  Bread_Winner__CompanyName__c , &quot;_blank&quot;)</formula>
        <label>See this Account in Xero</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__StreetAddress__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__TaxNumber__c</fullName>
        <description>Tax Number of Contact</description>
        <label>Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_1_Default_Value__c</fullName>
        <label>Sales Tracking Category 1 Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_1_Name__c</fullName>
        <label>Tracking Category 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_2_Default_Value__c</fullName>
        <label>Sales Tracking Category 2 Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_2_Name__c</fullName>
        <label>Tracking Category 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Xero_Org_ID__c</fullName>
        <label>Xero Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Xero_Org_Name__c</fullName>
        <label>Xero Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Xero Contact</label>
    <listViews>
        <fullName>Bread_Winner__Active</fullName>
        <columns>NAME</columns>
        <columns>Bread_Winner__CompanyName__c</columns>
        <columns>Bread_Winner__Salesforce_Account__c</columns>
        <columns>Bread_Winner__FirstName__c</columns>
        <columns>Bread_Winner__LastName__c</columns>
        <columns>Bread_Winner__Phone__c</columns>
        <columns>Bread_Winner__EmailAddress__c</columns>
        <columns>Bread_Winner__City__c</columns>
        <columns>Bread_Winner__Region__c</columns>
        <columns>Bread_Winner__Country__c</columns>
        <columns>Bread_Winner__PostalCode__c</columns>
        <columns>Bread_Winner__DefaultCurrency__c</columns>
        <columns>Bread_Winner__TaxNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bread_Winner__Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Bread_Winner__All</fullName>
        <columns>NAME</columns>
        <columns>Bread_Winner__CompanyName__c</columns>
        <columns>Bread_Winner__Salesforce_Account__c</columns>
        <columns>Bread_Winner__FirstName__c</columns>
        <columns>Bread_Winner__LastName__c</columns>
        <columns>Bread_Winner__Phone__c</columns>
        <columns>Bread_Winner__EmailAddress__c</columns>
        <columns>Bread_Winner__City__c</columns>
        <columns>Bread_Winner__Region__c</columns>
        <columns>Bread_Winner__Country__c</columns>
        <columns>Bread_Winner__PostalCode__c</columns>
        <columns>Bread_Winner__DefaultCurrency__c</columns>
        <columns>Bread_Winner__TaxNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BW - {0000}</displayFormat>
        <label>Xero Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>